--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,170 @@
-img {
-  width: 300px;
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
+
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.top {
+  background-color: #1F2937;
+  color: #F9FAF8;
+  padding-left: 150px;
+  padding-right: 120px;
+  padding-top: 20px;
+  display: flex;
+  gap: 100px;
+  flex-direction: column;
+}
+
+.nav, ul{
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  font-size: 24px;
+  color: #F9FAF8;
+  font-weight: 900;
+}
+
+ul {
+  color: #E7E5EB;
+  font-size: 18px;
+} 
+
+
+ul {
+  list-style-type: none;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+}
+
+
+
+ul{
+  gap: 20px;
+}
+
+
+.hero {
+  display: flex;
+  justify-content: space-around;
+}
+
+#main-heading {
+  font-size: 48px;
+  color: #F9FAF8;
+  weight: 900;
+}
+
+li,
+.left p{
+  font-size: 18px;
+  color: E5E7EB;
+  display: flex;
+}
+
+
+.right img{
+  width: 500px;
+  height: 300px;
+}
+
+.main h3{
+  text-align: center;
+  font-size: 36px;
+  weight: 900;
+  color: #172937;
+  padding: 50px 0px;
+}
+
+.cards {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  padding-bottom: 100px;
+}
+
+.cards img{
+  border: solid 2px black;
+}
+
+.container {
+  background-color: #E5E7EB;
+  padding: 75px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+#quote {
+  font-size: 36px;
+  color: #1F2937;
+  font-style: italic;
+  width: 850px;
+  font-weight: light;
+}
+
+
+#author {
+  text-align: end;
+}
+
+
+.container-two{
+  padding: 50px 0px;
+  display: flex;
+  justify-content: center;
+}
+    
+
+.call_to_action {
+  background-color: #3882F6;
+  width: 900px;
+  height: 150px;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+button {
+  background-color: #3882F6;
+  color: white;
+  border: 3px solid white;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 5px 15px;
+}
+
+#first {
+  border: none;
+}
+
+
+.footer {
+  background-color: #1F2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  color: white;
+}
+
+
+
+
+
+
